# app/Http/Controllers/API/V1/ProductApiController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\API\V1;
 
 use App\Http\Controllers\Controller;
 use App\Http\Repositories\ProductRepository;
+use App\Http\Resources\ProductResource;
 use App\Http\Services\Keys;
 use App\Models\Brand;
 use App\Models\Category;
@@ -204,6 +205,45 @@ class ProductApiController extends Controller
                 Keys::products_by_brand=> ProductRepository::getProductsByBrand($id)->response()->getData(true),
             ]
         ], 200);
+    }
+
+    /**
+     * @OA\Get(
+     ** path="/api/v1/product_details/{id}",
+     *  tags={"Product Details"},
+     *  description="get product details data by product id",
+     *     @OA\Parameter(
+     *         description="product id",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64"
+     *         ),
+     *     ),
+     *   @OA\Response(
+     *      response=200,
+     *      description="Its Ok",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   )
+     *)
+     **/
+    public function productDetail($id)
+    {
+        $product = Product::query()->find($id);
+        $product->increment('review');
+
+        return response()->json([
+            'result'=>true,
+            'message'=>'application products page',
+            'data'=>[
+                new ProductResource($product)
+            ]
+
+        ],200);
     }
 
 }
