# routes/api.php
@@ -33,6 +33,7 @@ Route::prefix('/v1')->namespace('Api\V1')->group(function (){
     Route::get('most_expensive_products', [ProductApiController::class, 'most_expensive_products']);
     Route::get('products_by_category/{id}', [ProductApiController::class, 'productsByCategory']);
     Route::get('products_by_brand{id}', [ProductApiController::class, 'productsByBrand']);
+    Route::get('product_details/{id}', [ProductApiController::class, 'productDetail']);
 });
 
 Route::prefix('/v1')->namespace('Api\V1')->middleware('auth:sanctum')->group(function (){
